--- a/_includes/sc/schedule.html
+++ b/_includes/sc/schedule.html
@@ -1,26 +1,51 @@
 <div class="row">
   <div class="col-md-6">
-    <h3>Day 1</h3>
+    <h3>December 14</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Automating tasks with the Unix shell</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Building programs with Python</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>09:00</td>  
+        <td><a href="http://swcarpentry.github.io/shell-novice/" target="_blank">Automating tasks with the Unix shell</a></td></tr>
+      <tr> <td>10:30</td>  <td>Break</td> </tr>
+      <tr>
+        <td>10:45</td>
+        <td>Unix Shell, con't</td>
+      </tr>
+      <tr> <td>11:45</td>  <td>Wrap-up</td> </tr>      
+      <tr> <td>12:00</td>  <td>END</td> </tr>
     </table>
   </div>
   <div class="col-md-6">
-    <h3>Day 2</h3>
+    <h3>December 15</h3>
     <table class="table table-striped">
-      <tr> <td>09:00</td>  <td>Version control with Git</td> </tr>
-      <tr> <td>10:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>12:00</td>  <td>Lunch break</td> </tr>
-      <tr> <td>13:00</td>  <td>Managing data with SQL</td> </tr>
-      <tr> <td>14:30</td>  <td>Coffee</td> </tr>
-      <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
-      <tr> <td>16:30</td>  <td>END</td> </tr>
+      <tr> <td>09:00</td>  <td><a href="http://swcarpentry.github.io/git-novice/"  target="_blank">Version control with Git</a></td> </tr>
+      <tr> <td>10:30</td>  <td>Break</td> </tr>
+      <tr>        <td>10:45</td>
+        <td>Git, con't</td>
+      </tr>
+      <tr> <td>11:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>12:00</td>  <td>END</td> </tr>
     </table>
   </div>
 </div>
+<div class="row">
+  <div class="col-md-6">
+    <h3>December 21</h3>
+    <table class="table table-striped">
+      <tr> <td>09:00</td>
+        <td><a href="http://swcarpentry.github.io/python-novice-inflammation/"  target="_blank">Building programs with Python</a> (part 1)</td> </tr>
+      <tr> <td>10:30</td>  <td>Break</td> </tr>
+      <tr> <td>10:45</td>  <td>Python, con't</td> </tr> 
+      <tr> <td>11:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>12:00</td>  <td>END</td> </tr>
+    </table>
+  </div>
+<div class="row">
+  <div class="col-md-6">
+    <h3>December 22</h3>
+    <table class="table table-striped">
+      <tr> <td>09:00</td>        <td><a href="http://swcarpentry.github.io/python-novice-inflammation/"  target="_blank">Building programs with Python</a> (part 2)</td> </tr>
+      <tr> <td>10:30</td>  <td>Break</td> </tr>
+      <tr> <td>10:45</td>  <td>Python, con't</td> </tr>
+      <tr> <td>11:45</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>12:00</td>  <td>END</td> </tr>
+    </table>
+  </div>
